_includes/css/index.css
body {
  --body-margin: 0px;

  min-height: calc(100vh - 2 * var(--body-margin));
  min-width: 100vw;
  margin: var(--body-margin);
}

body {
  font-family: Verdana, sans-serif;
}

html, body, body > * {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: justify;
}

body > * {
  box-sizing: border-box;
  width: 100%;
}

main {
  flex: 1;
}

header, footer {
  font-size: large;
}

header {
  margin: 10px;
}

main {
  margin: 5px 10px;
  padding: 0 10%;
}

footer {
  margin: 10px;
}

hr {
  --side-margin: 10px;
  margin: 0 var(--side-margin);
  width: calc(100% - 2 * var(--side-margin));
}

.plain-links a {
  color: black;
  text-decoration: underline !important;
}

p {
  width: 100%;
}

